--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -77,3 +77,29 @@ aside {
 
 }
 
+/* .first-li {
+  font-weight: bold;
+} */
+
+
+/* Pseudo classes */
+li:first-child {
+  font-weight: bold;
+}
+
+li:last-child {
+  font-style: italic;
+}
+
+li:nth-child(even) {
+  /* color: red; */
+}
+
+/* não funciona porque p não é o primeiro filho do article. */
+/* article p:first-child {
+  color: red;
+} */
+
+article p:last-child {
+  color: red;
+}
