--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -1,8 +1,44 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   color:  #444;
   font-family: sans-serif;
 
   border-top: 10px solid #1098ad;
+}
+
+.main-header {
+  background-color: #f7f7f7;
+  /* padding: 20px;
+  padding-left: 40px;
+  padding-right: 40px; */
+
+  padding: 20px 40px;
+  margin-bottom: 40px;
+}
+
+nav {
+  font-size: 18px;
+}
+
+article {
+  margin-bottom: 50px;
+}
+
+.post-header {
+  margin-bottom: 40px;
+}
+
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad; /* shorhand property */
+  border-bottom: 5px solid #1098ad; /* shorhand property */
+  padding: 50px 0;
+  
+  width: 500px;
 }
 
 h1, h2, h3 {
@@ -17,10 +53,13 @@ h1 {
 
 h2 {
   font-size: 40px;
+  margin-bottom: 30px;
 }
 
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 25px;
 }
 
 h4 {
@@ -32,10 +71,21 @@ h4 {
 p {
   font-size: 22px;
   line-height: 1.5;
+  margin-bottom: 15px;
+}
+
+ul, ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
 }
 
 li {
   font-size: 20px;
+  margin-bottom: 10px;
+}
+
+li:last-child {
+  margin-bottom: 0;
 }
 
 /* footer p {
@@ -68,16 +118,6 @@ li {
   list-style: none;
 }
 
-.main-header {
-  background-color: #f7f7f7;
-}
-
-aside {
-  background-color: #f7f7f7;
-  border-top: 5px solid #1098ad; /* shorhand property */
-  border-bottom: 5px solid #1098ad; /* shorhand property */
-
-}
 
 /* .first-li {
   font-weight: bold;
@@ -150,6 +190,3 @@ footer p {
   font-size: 18px;
 } */
 
-nav {
-  font-size: 18px;
-}
