--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -18,6 +18,8 @@ body {
 
   padding: 20px 40px;
   margin-bottom: 40px;
+
+  height: 80px;
 }
 
 nav {
@@ -37,7 +39,7 @@ aside {
   border-top: 5px solid #1098ad; /* shorhand property */
   border-bottom: 5px solid #1098ad; /* shorhand property */
   padding: 50px 0;
-  
+
   width: 500px;
 }
 
@@ -190,3 +192,7 @@ footer p {
   font-size: 18px;
 } */
 
+.post-img {
+  width: 100%;
+  height: auto;
+}
