--- a/03-CSS-Fundamentals/Challenge/challenge.css
+++ b/03-CSS-Fundamentals/Challenge/challenge.css
@@ -1,11 +1,20 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: sans-serif;
   line-height: 1.4;
 }
 
+
+
 /* PRODUCT */
 .product {
   border: 4px solid black;
+  width: 825px;
+  margin: 0 auto;
 }
 
 .product-title {
@@ -13,6 +22,7 @@ body {
   text-transform: uppercase;
   font-size: 20px;
   background-color: #f7f7ff;
+  padding: 15px;
 }
 
 /* PRODUCT INFORMATION */
@@ -26,6 +36,11 @@ body {
   font-size: 12px;
   font-weight: bold;
   color: #777;
+  margin-bottom: 20px;
+}
+
+.text {
+  margin-bottom: 10px;
 }
 
 .more-info:any-link, .more-info:visited {
@@ -41,10 +56,16 @@ body {
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
+  margin: 10px 0;
 }
 
 .details-list {
   list-style-type: square;
+  margin-left: 20px;
+}
+
+.details-list li {
+  margin-bottom: 10px;
 }
 
 /* BUTTON */
@@ -56,6 +77,10 @@ body {
   font-size: 20px;
   text-transform: uppercase;
   cursor: pointer;
+
+  padding: 15px;
+  width: 100%;
+  border-top: 4px solid black;
 }
 
 .add-cart:hover {
