--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -8,6 +8,8 @@ body {
   font-family: sans-serif;
 
   border-top: 10px solid #1098ad;
+  
+  position: relative;
 }
 
 .container {
@@ -15,6 +17,8 @@ body {
 
   /* Centering the page */
   margin: 0 auto;
+
+  /* position: relative; */
 }
 
 .main-header {
@@ -200,6 +204,16 @@ nav a:link:last-child {
 .post-img {
   width: 100%;
   height: auto;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
 }
 
 
