Challenge #1 - Floats Clearing Floats

--- a/04-CSS-Layouts/Challenge/challenge.css
+++ b/04-CSS-Layouts/Challenge/challenge.css
@@ -162,3 +162,12 @@ body {
   background-color: rgb(123, 34, 34);
 }
 
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.container {
+  /* background-color: red; */
+}
