--- a/04-CSS-Layouts/style.css
+++ b/04-CSS-Layouts/style.css
@@ -197,7 +197,7 @@ nav a:link {
   display: block; */
 
   margin-right: 30px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   display: inline-block;
 }
 
@@ -268,6 +268,7 @@ nav p {
 
 
 /* FLOATS */
+/*
 
 .author-img {
   float: left;
@@ -275,7 +276,7 @@ nav p {
 }
 
 .author {
-  /* padding-left: 80px; */
+
   float: left;
 
   margin-top: 15px;
@@ -312,4 +313,48 @@ aside {
 
 footer {
   clear: both;
+}
+*/
+
+/* FLEXBOX */
+
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.author-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.author {
+  margin-bottom: 0;
+  margin-left: 15px;
+}
+
+.related-post {
+  display: flex;
+  align-items: center;
+  /* margin-left: 15px; */
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.related-link:link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+
+  display: block;
+  margin-bottom: 5px;
+}
+
+.related-author {
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
 }
