--- a/04-CSS-Layouts/style.css
+++ b/04-CSS-Layouts/style.css
@@ -358,3 +358,20 @@ footer {
   font-weight: normal;
   font-style: italic;
 }
+
+.row {
+  display: flex;
+  gap: 75px;
+  margin-bottom: 60px;
+  align-items: flex-start;
+}
+
+article {
+  flex: 1;
+  margin-bottom: 0;
+}
+
+aside {
+  flex-basis: 300px;
+  flex: 0 0 300px;
+}
