--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -19,8 +19,8 @@ Default: 1
 --- 02 COLORS
 
 - Primary: #e67e22
-- Tints: #fae5d3,
-- Shades:
+- Tints: #fdf2e9,
+- Shades:#cf711f
 - Accents:
 - Greys: #555, #333
 
@@ -51,14 +51,14 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
 }
 
 .section-hero {
-  background-color: #fae5d3;
+  background-color: #fdf2e9;
   padding: 9.6rem 0;
 }
 
@@ -92,6 +92,7 @@ body {
 
   text-decoration: none;
   font-size: 2rem;
+  font-weight: 600;
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
 
@@ -118,7 +119,7 @@ body {
 
 .btn--outline:hover,
 .btn--outline:active {
-  background-color: #fae5d3;
+  background-color: #fdf2e9;
   
   /* border: 3px solid #fff; */
 
@@ -132,4 +133,40 @@ body {
 
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+
+.delivered-meals {
+  display: flex;
+  margin-top: 8.0rem;
+
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.delivered-imgs {
+  display: flex;
+}
+
+.delivered-imgs img {
+  height: 4.8rem;
+  width: 4.8rem;
+  border-radius: 50%;
+
+  margin-right: -1.6rem;
+  border: 3px solid #fdf2e9;
+}
+
+.delivered-imgs img:last-child {
+  margin: 0;
+}
+
+.delivered-text {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+.delivered-text span {
+  color:#cf711f;
+  font-weight: 700;
 }
