--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -8,11 +8,16 @@ FONT SIZE SYSTEM (px)
 
 - Font Weight:
 Default: 400
+Medium: 500
+Semi-Bold: 600
+Bold: 700
 
 
 
 - Line Weight:
 Default: 1
+Small: 1.05
+paragraph default: 1.6
 
 
 
@@ -28,7 +33,7 @@ Default: 1
 
 
 --- 06 BORDER_RADIUS
-
+Default: 9px
 
 --- 07 WHITESPACE
 
@@ -127,6 +132,46 @@ body {
 
 .logo {
   height: 2.2rem;
+}
+
+/**************************************/
+/* NAVIGATION */
+/**************************************/
+
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+}
+
+.main-nav-link:link, 
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  display: inline-block;
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #cf711f;
 }
 
 /**************************************/
