--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -41,6 +41,7 @@ paragraph default: 1.6
 
 --- 06 BORDER_RADIUS
 Default: 9px
+Medium: 11px
 
 --- 07 WHITESPACE
 
@@ -164,7 +165,8 @@ body {
   border-radius: 9px;
 
   /*Put transition on original "state" */
-  transition: background-color 0.3s;
+  /* transition: background-color 0.3s; */
+  transition: all 0.3s;
 }
 
 .btn--full:link,
@@ -192,4 +194,38 @@ body {
 
   /* Trick to add border inside */
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+.link:link,
+.link:visited {
+  display: inline-block;
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
+}
+
+/* HELPING/SETTING CLASSES */
+
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
+
+.margin-botton-md {
+  margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+  text-align: center;
+}
+
+strong {
+  font-weight: 500;
 }
