--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -32,6 +32,7 @@ paragraph default: 1.6
 - Tints: 
 #fdf2e9,
 #fae5d3
+#eb984e
 - Shades:#cf711f
 - Accents:
 - Greys: 
@@ -41,7 +42,7 @@ paragraph default: 1.6
 
 
 --- 05 SHADOWS
-
+0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
 
 --- 06 BORDER_RADIUS
 Default: 9px
@@ -92,7 +93,7 @@ body {
   row-gap: 9.6rem;
   column-gap: 6.4rem;
 
-  
+
   /* margin-bottom: 9.6rem; */
 }
 
