--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -33,7 +33,9 @@ paragraph default: 1.6
 #fdf2e9,
 #fae5d3
 #eb984e
-- Shades:#cf711f
+- Shades:
+#cf711f
+#45260a
 - Accents:
 - Greys: 
 #6f6f6f (lighest grey allowed on #fdf2e9)
@@ -169,7 +171,7 @@ body {
   margin-bottom: 3.2rem;
 }
 
-
+.btn,
 .btn:link, 
 .btn:visited {
   display: inline-block;
@@ -183,6 +185,11 @@ body {
   /*Put transition on original "state" */
   /* transition: background-color 0.3s; */
   transition: all 0.3s;
+
+  /* Only for the .btn  */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
 }
 
 .btn--full:link,
@@ -210,6 +217,18 @@ body {
 
   /* Trick to add border inside */
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
 }
 
 .link:link,
@@ -246,6 +265,13 @@ body {
   width: 3rem;
   height: 3rem;
   color: #e67e22;
+}
+
+*:focus {
+  outline: none;
+  /* outline: 4px dotted #e67e22; */
+  /* outline-offset: 8px; */
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 /* HELPING/SETTING CLASSES */
