--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -38,6 +38,8 @@ paragraph default: 1.6
 #45260a
 - Accents:
 - Greys: 
+#888;
+#767676; (lightes gray allowed on #fff)
 #6f6f6f (lighest grey allowed on #fdf2e9)
 #555 
 #333
