Removing some useless code.

--- a/80-Omnifood-Desktop-Responsive/css/general.css
+++ b/80-Omnifood-Desktop-Responsive/css/general.css
@@ -131,7 +131,8 @@ body {
 }
 
 .heading-primary,
-.heading-secondary {
+.heading-secondary,
+.heading-tertiary {
   font-weight: 700;
   color: #333;
   letter-spacing: -0.5px;
@@ -163,19 +164,6 @@ body {
   text-transform: uppercase;
   margin-bottom: 1.6rem;
   letter-spacing: 0.75px;
-}
-
-/**************************************/
-/* GENERAL COMPONENTS */
-/**************************************/
-
-.hero-primary {
-  font-size: 5.2rem;
-  font-weight: 700;
-  line-height: 1.05;
-  color: #333;
-  letter-spacing: -0.5px;
-  margin-bottom: 3.2rem;
 }
 
 .btn,
